# fastapi-essentials

./: README.md  pyproject.toml
src/: main.py  setup.py
src/database/: tables.py
src/database/repositories/: __init__.py  employee.py
src/dependencies/: database.py  lifespan.py
src/domain/admin/: routers.py
src/domain/admin/auth/: domain.py  routers.py
src/domain/admin/auth/models/: __init__.py
src/domain/admin/employees/models/: ___init__.py
src/domain/admin/roles/models/: __init__.py
src/domain/products/models/: __init__.py
src/domain/users/models/: __init__.py
src/integrations/authentication/: __init__.py  auth_factory.py  auth_interfaces.py  auth_models.py  auth_raises.py
src/integrations/authentication/strategies/: __init__.py  auth_login_password.py
src/utils/: security.py
